[gd_scene load_steps=2 format=3 uid="uid://workshop001"]

[ext_resource type="Script" path="res://Workshop.gd" id="1"]

[node name="Workshop" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.1, 0.1, 0.15, 1)

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 40
theme_override_constants/margin_top = 40
theme_override_constants/margin_right = 40
theme_override_constants/margin_bottom = 40

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="TitleLabel" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Community Workshop"
horizontal_alignment = 1

[node name="Spacer1" type="Control" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2

[node name="ChartListContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/ChartListContainer"]
layout_mode = 2
text = "Available Charts:"

[node name="ChartList" type="ItemList" parent="MarginContainer/VBoxContainer/ChartListContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="Spacer2" type="Control" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2

[node name="ChartInfoPanel" type="PanelContainer" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 150)
layout_mode = 2

[node name="ChartInfoLabel" type="Label" parent="MarginContainer/VBoxContainer/ChartInfoPanel"]
layout_mode = 2
text = "Select a chart to view details"
vertical_alignment = 1

[node name="Spacer3" type="Control" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2

[node name="BottomButtons" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="BackButton" type="Button" parent="MarginContainer/VBoxContainer/BottomButtons"]
layout_mode = 2
size_flags_horizontal = 3
text = "Back to Menu"

[node name="Spacer" type="Control" parent="MarginContainer/VBoxContainer/BottomButtons"]
custom_minimum_size = Vector2(20, 0)
layout_mode = 2

[node name="RefreshButton" type="Button" parent="MarginContainer/VBoxContainer/BottomButtons"]
layout_mode = 2
size_flags_horizontal = 3
text = "Refresh"

[node name="Spacer2" type="Control" parent="MarginContainer/VBoxContainer/BottomButtons"]
custom_minimum_size = Vector2(20, 0)
layout_mode = 2

[node name="DownloadButton" type="Button" parent="MarginContainer/VBoxContainer/BottomButtons"]
layout_mode = 2
size_flags_horizontal = 3
text = "Play Selected Chart"
